# flappy-bird-advance-rs

./: Cargo.toml  README.md  flappy_burst.gba
gfx/: background.aseprite  sprites.aseprite
src/: main.rs
